--- a/neoamerica/notebook/Agenda.org
+++ b/neoamerica/notebook/Agenda.org
@@ -6,8 +6,10 @@
 
 
 *SCRATCH*
-Ok so where do I want to take this. Of course I got this idea from Transmetropolitan/Spider Jerusalem. NeoAmerica "I Think I Hate It Here". I mostly want to make quick burst posts targeting the political world but also pop culture. Do to short attention spans I believe my posts should be short, quick and funny. Colorful to catch attention. Each post should have a colorful meme/image attached to be planted via instagram and lead back to the site. The site its self on the front should be a table format of the images, when clicked on a frame should appear with the actual post...so we're looking at an SPA.  Now do I want an interface within the website or am I pushing it from my computer and just an editor?
+Ok so where do I want to take this. Of course I got this idea from Transmetropolitan/Spider Jerusalem. NeoAmerica "I Think I Hate It Here". I mostly want to make quick burst posts targeting the political world but also pop culture. Due to short attention spans I believe my posts should be short, quick and funny. Colorful to catch attention. Each post should have a colorful meme/image attached to be planted via instagram and lead back to the site. The site its self on the front should be a table format of the images, when clicked on a frame should appear with the actual post...so we're looking at an SPA.
+  Now do I want an interface within the website or am I pushing it from my computer and just an editor?
 
+Controversional MICRO NEWS
 Should posts come in categories? Just tags?
 
 POST MODEL
@@ -22,7 +24,7 @@ category [political, pop culture, tech, misc?]
 * IDEA One man twitter show, mixed in with my own items/tshirts/redbubble stuff. also IF YOU'RE AMERICAN COMPANY on Amazon or any platform contact me
 
 
-* TODO Database model to create posts
+* DONE Database model to create posts
 * TODO Database transactions. Create, Update, Show All and Single Posts, Delete
 * TODO Show posts on front end
 * TODO User creation/Authentication/
@@ -36,3 +38,55 @@ category [political, pop culture, tech, misc?]
 
 
 # Integrant Study
+
+
+
+* WHAT TO DO WITH THIS? FROM JOURNAL
+
+* VIBE
+I've been anxious and trying to figure out...business vs personal...neo america or 'saga'...will talking politics run people off? Maybe my vibe should be that of an observer. Thoughtful.
+
+* Thoughts
+** TODO check out ghostwheel, debugging tool/specs 
+** TODO cockpit view "Mr v3ga, you're now jacked in!"
+*** TODO cockpit will be a floating component. When you're logged in it will be available on any view
+
+
+* [Study]
+integrant.repl should be put in user namespace
+
+Reading about integrant now... init-key, is it possible to start with just one component. That defeats the purpose but just to see how it works.
+#+BEGIN_SRC clojure
+  (defmethod ig/init-key :server [_ {:keys [port]}
+                                (println "NeoAmerica Server starting at port:" port)
+                                (jetty/run-jetty {:port port :join? false})])
+#+END_SRC
+
+
+: class clojure.lang.Compiler$CompilerExceptionclass clojure.lang.Compiler$CompilerExceptionSyntax error macroexpanding clojure.core/fn at (src/clj/neoamerica/nexus.clj:1:1).
+: ((println "NeoAmerica Server starting at port:" port) (jetty/run-jetty {:port port, :join? false})) - failed: Extra input at: [:fn-tail :arity-1 :params] spec: :clojure.core.specs.alpha/param-list
+: _ - failed: vector? at: [:fn-tail :arity-n :params] spec: :clojure.core.specs.alpha/param-list
+** DONE So it complains `no method in muli-methold 'init-key' for dispatch value :server `
+run-jetty DOES have to have something thrown at it...your router...I believe. 
+* TODO ^ it works now, come back and explain how to stack integrant components
+
+
+
+* [Instructions]
+
+* Layout
+Running node-sass: https://webdesign.tutsplus.com/tutorials/watch-and-compile-sass-in-five-quick-steps--cms-28275
+
+Admin should have a hub of some sort to make posts.  Initially I'll be the only poster then allow comments as I get some grounding. Maybe within a year or so I can open up for users... or maybe it will be my own ranting corner
+
+https://medium.com/@adoolak/how-to-link-preview-like-facebook-twitter-slack-and-whatsapp-549381fef40a
+
+better understanding of jwt
+css reset -https://dev.to/hankchizljaw/a-modern-css-reset-6p3
+* Security
+https://github.com/jjl/cryptic
+session middleware to always check
+login only required to make comments or post
+
+* ERRORS 
+- clojure.tools.namespace.repl/refresh : unparsable namespace: []
