--- a/neoamerica/notebook/Journal.org
+++ b/neoamerica/notebook/Journal.org
@@ -45,3 +45,25 @@ _Route_
 
 * <2021-01-05 Tue>
 ** TODO Start on NeoAmerica UI. Just the header 
+
+* POSTGRES STUFF
+Most \d commands support additional param of __schema__.name__ and accept wildcards like *.*
+
+    \q: Quit/Exit
+    \c __database__: Connect to a database
+    \d __table__: Show table definition (columns, etc.) including triggers
+    \d+ __table__: More detailed table definition including description and physical disk size
+    \l: List databases
+    \dy: List events
+    \df: List functions
+    \di: List indexes
+    \dn: List schemas
+    \dt *.*: List tables from all schemas (if *.* is omitted will only show SEARCH_PATH ones)
+    \dT+: List all data types
+    \dv: List views
+    \dx: List all extensions installed
+    \df+ __function__ : Show function SQL code.
+    \x: Pretty-format query results instead of the not-so-useful ASCII tables
+    \copy (SELECT * FROM __table_name__) TO 'file_path_and_name.csv' WITH CSV: Export a table as CSV
+    \des+: List all foreign servers
+    \dE[S+]: List all foreign tables
